--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,43 @@
+[metadata]
+name = edc-pregnancy-utils
+version = attr: _version
+author = Erik van Widenfelt
+author_email = ew2789@gmail.com
+url = https://github.com/clinicedc/edc-pregnancy-utils
+license = GPL license, see LICENSE
+description = Classes for pregnancy utilities in clinicedc/edc projects
+long_description = file: README.rst
+long_description_content_type = text/x-rst
+keywords = django Edc pregnancy, CRF, clinicedc, clinical trials
+classifiers=
+    Environment :: Web Environment
+    Framework :: Django
+    Framework :: Django :: 4.1
+    Intended Audience :: Developers
+    Intended Audience :: Science/Research
+    Operating System :: OS Independent
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+
+
+[options]
+python_requires = >=3.10
+zip_safe = False
+include_package_data = True
+packages = find:
+
+[options.packages.find]
+exclude =
+    examples*
+    tools*
+    docs*
+    bin*
+    edc_pregnancy_utils.tests*
+
 [flake8]
-ignore = E226,E302,E41,F401
-max-line-length = 120
+ignore = E226,W503,E203
+max-line-length = 95
 max-complexity = 10
-# exclude = edc_pregnancy_utils/
+exclude = */migrations/*,.tox,.git,__pycache__,build,dist,.eggs
+per-file-ignores = __init__.py: F401
